force-app/main/default/objects/nFORCE__Screen_Segment__c/fields/nFORCE__Screen_Section__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Screen_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This required lookup field automatically populates and is used to specify the Screen Section record that is associated with the Credit Memo template.</description>
    <label>Screen Section</label>
    <referenceTo>nFORCE__Screen_Section__c</referenceTo>
    <relationshipLabel>Screen Segments</relationshipLabel>
    <relationshipName>Screen_Segments</relationshipName>
    <type>Lookup</type>
</CustomField>