force-app/main/default/objects/nFORCE__Screen_Segment__c/fields/nFORCE__Type__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Type__c</fullName>
    <description>This optional picklist field displays to an administrator when selecting an action to take on the product package.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bulk Update</fullName>
            </value>
            <value>
                <fullName>Bulk Update Field Grid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>